<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/registerToolbarTV"
                android:layout_centerVertical="true"
                android:textSize="24sp"
                android:textColor="#FFFFFF"
                android:layout_alignParentLeft="true" />

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registerScrollView"
        android:layout_gravity="center_horizontal" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_login"
                    android:id="@+id/registerLoginTV"
                    android:layout_column="0" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/registerLoginET"
                    android:scrollHorizontally="true"
                    android:layout_column="1" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_email_reg"
                    android:id="@+id/textView3"
                    android:layout_column="0" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollHorizontally="true"
                    android:id="@+id/registerEmailET"
                    android:layout_column="1"
                    android:inputType="textEmailAddress" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_password_reg"
                    android:id="@+id/textView4"
                    android:layout_column="0" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollHorizontally="true"
                    android:id="@+id/registerPWET"
                    android:layout_column="1"
                    android:inputType="textPassword" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_confirm_password"
                    android:id="@+id/textView5"
                    android:layout_column="0" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollHorizontally="true"
                    android:id="@+id/registerCPWET"
                    android:layout_column="1"
                    android:inputType="textPassword" />
            </TableRow>
        </TableLayout>
    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_accept"
        android:id="@+id/registerAcceptButton"
        android:layout_gravity="bottom"
        android:singleLine="true" />
    </LinearLayout>
</LinearLayout>